--- a/style.css
+++ b/style.css
@@ -35,6 +35,16 @@ button{
    
     
 }
+.drawSection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#draw{
+    font-size: 15px;
+    font-weight: bold;
+}
 .buttonDiv{
     display: flex;
     gap: 50px;
@@ -46,4 +56,7 @@ button{
     width:500px;
     height: 500px;
     border: 1px solid rgb(129, 51, 129);
+}
+button:hover{
+    opacity: .6;
 }
